--- a/nft-marketplace/package.json
+++ b/nft-marketplace/package.json
@@ -17,9 +17,13 @@
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
+    "@walletconnect/web3-provider": "^1.7.8",
+    "ethers": "^5.6.9",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-toastify": "^9.0.5",
+    "web3modal": "^1.9.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
